{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 870,
  "lineage": "1e17ca13-b37b-ba22-1c31-2856774a8bef",
  "resources": [
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "aws_instance",
      "name": "firewall_to",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:332376096653:instance/i-0d295895f1e4f7fca",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d295895f1e4f7fca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5a.large",
            "ipv6_address_count": 0,
            "key_name": "firewall-to",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-05bb292786590dae9"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-06fa5f49a8a7ec284"
              },
              {
                "delete_on_termination": false,
                "device_index": 2,
                "network_card_index": 0,
                "network_interface_id": "eni-0e4fa7f2c401326c0"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05bb292786590dae9",
            "private_dns": "ip-172-31-1-4.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.1.4",
            "public_dns": "ec2-3-212-46-228.compute-1.amazonaws.com",
            "public_ip": "3.212.46.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e4860b0f4ec53a05",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "enterprise_sg20240902151006954600000004"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddf33aafb8990a62",
            "tags": {
              "Name": "firewall_to"
            },
            "tags_all": {
              "Name": "firewall_to"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b697c1f2b7b56dfc"
            ]
          },
          "dependencies": [
            "module.interface.aws_network_interface.enterprise_eni_firewall_to",
            "module.interface.aws_network_interface.idmz_eni_firewall_to",
            "module.interface.aws_network_interface.industrial_eni_firewall_to",
            "module.security_group.aws_security_group.enterprise_sg",
            "module.security_group.aws_security_group.idmz_sg",
            "module.security_group.aws_security_group.industrial_sg",
            "module.subnet.aws_subnet.enterprise_subnet",
            "module.subnet.aws_subnet.idmz_subnet",
            "module.subnet.aws_subnet.industrial_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.interface",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "enterprise_eni_firewall_to",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332376096653:network-interface/eni-05bb292786590dae9",
            "description": "Interface da Rede Enterprise no Firewall TO",
            "id": "eni-05bb292786590dae9",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:ff:f8:3f:d7:13",
            "owner_id": "332376096653",
            "private_dns_name": "ip-172-31-1-4.ec2.internal",
            "private_ip": "172.31.1.4",
            "private_ip_list": [
              "172.31.1.4"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.31.1.4"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0b697c1f2b7b56dfc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddf33aafb8990a62"
          },
          "dependencies": [
            "module.security_group.aws_security_group.enterprise_sg",
            "module.subnet.aws_subnet.enterprise_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.interface",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "idmz_eni_firewall_to",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332376096653:network-interface/eni-06fa5f49a8a7ec284",
            "description": "Interface da Rede IDMZ no Firewall TO",
            "id": "eni-06fa5f49a8a7ec284",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:ff:dc:34:11:ab",
            "owner_id": "332376096653",
            "private_dns_name": "ip-172-31-2-4.ec2.internal",
            "private_ip": "172.31.2.4",
            "private_ip_list": [
              "172.31.2.4"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.31.2.4"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0dddbdb9ca7c970a9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00050a8d6befb868f"
          },
          "dependencies": [
            "module.security_group.aws_security_group.idmz_sg",
            "module.subnet.aws_subnet.idmz_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.interface",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "industrial_eni_firewall_to",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332376096653:network-interface/eni-0e4fa7f2c401326c0",
            "description": "Interface da Rede Industrial no Firewall TO",
            "id": "eni-0e4fa7f2c401326c0",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:ff:d3:65:e3:1f",
            "owner_id": "332376096653",
            "private_dns_name": "ip-172-31-3-4.ec2.internal",
            "private_ip": "172.31.3.4",
            "private_ip_list": [
              "172.31.3.4"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.31.3.4"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a6c41d9a02bb687a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068c22c13638f50e9"
          },
          "dependencies": [
            "module.security_group.aws_security_group.industrial_sg",
            "module.subnet.aws_subnet.industrial_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "existing_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332376096653:internet-gateway/igw-0822bd10db91676da",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-035de6a04b60456dc"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-035de6a04b60456dc"
                ]
              }
            ],
            "id": "igw-0822bd10db91676da",
            "internet_gateway_id": "igw-0822bd10db91676da",
            "owner_id": "332376096653"
          }
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_eip",
      "name": "firewall_to_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01bf2a2362379421a",
            "arn": "arn:aws:ec2:us-east-1:332376096653:elastic-ip/eipalloc-01bf2a2362379421a",
            "domain": "vpc",
            "id": "eipalloc-01bf2a2362379421a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-212-46-228.compute-1.amazonaws.com",
            "public_ip": "3.212.46.228",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "enterprise_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332376096653:route-table/rtb-0f5950dc6210fc736",
            "id": "rtb-0f5950dc6210fc736",
            "owner_id": "332376096653",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0822bd10db91676da",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-035de6a04b60456dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.route_table.data.aws_internet_gateway.existing_igw"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "idmz_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332376096653:route-table/rtb-0590358c434f0d4b0",
            "id": "rtb-0590358c434f0d4b0",
            "owner_id": "332376096653",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-06fa5f49a8a7ec284",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "IDMZ Route Table"
            },
            "tags_all": {
              "Name": "IDMZ Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-035de6a04b60456dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.interface.aws_network_interface.idmz_eni_firewall_to",
            "module.security_group.aws_security_group.idmz_sg",
            "module.subnet.aws_subnet.idmz_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "industrial_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332376096653:route-table/rtb-08a690b6ae8cf0f28",
            "id": "rtb-08a690b6ae8cf0f28",
            "owner_id": "332376096653",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0e4fa7f2c401326c0",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Industrial Route Table"
            },
            "tags_all": {
              "Name": "Industrial Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-035de6a04b60456dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.interface.aws_network_interface.industrial_eni_firewall_to",
            "module.security_group.aws_security_group.industrial_sg",
            "module.subnet.aws_subnet.industrial_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "enterprise_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07109018dda563d51",
            "route_table_id": "rtb-0f5950dc6210fc736",
            "subnet_id": "subnet-0ddf33aafb8990a62"
          },
          "dependencies": [
            "module.route_table.aws_route_table.enterprise_rt",
            "module.route_table.data.aws_internet_gateway.existing_igw",
            "module.subnet.aws_subnet.enterprise_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "idmz_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9f45dc10420247b",
            "route_table_id": "rtb-0590358c434f0d4b0",
            "subnet_id": "subnet-00050a8d6befb868f"
          },
          "dependencies": [
            "module.interface.aws_network_interface.idmz_eni_firewall_to",
            "module.route_table.aws_route_table.idmz_rt",
            "module.security_group.aws_security_group.idmz_sg",
            "module.subnet.aws_subnet.idmz_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "industrial_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02287dc77388078e9",
            "route_table_id": "rtb-08a690b6ae8cf0f28",
            "subnet_id": "subnet-068c22c13638f50e9"
          },
          "dependencies": [
            "module.interface.aws_network_interface.industrial_eni_firewall_to",
            "module.route_table.aws_route_table.industrial_rt",
            "module.security_group.aws_security_group.industrial_sg",
            "module.subnet.aws_subnet.industrial_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "enterprise_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332376096653:security-group/sg-0b697c1f2b7b56dfc",
            "description": "Grupo de regras associadas a Rede Enterprise",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b697c1f2b7b56dfc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "enterprise_sg20240902151006954600000004",
            "name_prefix": "enterprise_sg",
            "owner_id": "332376096653",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-035de6a04b60456dc"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "idmz_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332376096653:security-group/sg-0dddbdb9ca7c970a9",
            "description": "Grupo de regras associadas a Rede IDMZ",
            "egress": [
              {
                "cidr_blocks": [
                  "172.31.2.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dddbdb9ca7c970a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.2.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "idmz_sg20240902151006952300000003",
            "name_prefix": "idmz_sg",
            "owner_id": "332376096653",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-035de6a04b60456dc"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "industrial_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332376096653:security-group/sg-0a6c41d9a02bb687a",
            "description": "Grupo de regras associadas a Rede Industrial",
            "egress": [
              {
                "cidr_blocks": [
                  "172.31.3.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6c41d9a02bb687a",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.3.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "industrial_sg20240902151006948900000002",
            "name_prefix": "industrial_sg",
            "owner_id": "332376096653",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-035de6a04b60456dc"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.service",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a81a99f5ec58529",
            "arn": "arn:aws:ec2:us-east-1:332376096653:instance/i-08860a1838b430859",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08860a1838b430859",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-018cc9b30d198120e",
            "private_dns": "ip-172-31-2-56.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.2.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-014cadbadeee82331",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "idmz_sg20240902151006952300000003"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00050a8d6befb868f",
            "tags": {
              "Name": "Nginx-Server"
            },
            "tags_all": {
              "Name": "Nginx-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dddbdb9ca7c970a9"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.idmz_sg",
            "module.subnet.aws_subnet.idmz_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.service",
      "mode": "managed",
      "type": "aws_instance",
      "name": "openplc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:332376096653:instance/i-087ba53dcec2aa9ef",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087ba53dcec2aa9ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04fdc42921e308098",
            "private_dns": "ip-172-31-3-149.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.3.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ab48b14bf351ebb3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "industrial_sg20240902151006948900000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068c22c13638f50e9",
            "tags": {
              "Name": "OpenPLC-Server"
            },
            "tags_all": {
              "Name": "OpenPLC-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a6c41d9a02bb687a"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.industrial_sg",
            "module.subnet.aws_subnet.industrial_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.service",
      "mode": "managed",
      "type": "aws_instance",
      "name": "openvpn_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:332376096653:instance/i-04839b8180c137acf",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04839b8180c137acf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0644eaf81749ae059",
            "private_dns": "ip-172-31-2-160.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.2.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-048cf0d7c86e3f8a9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "idmz_sg20240902151006952300000003"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00050a8d6befb868f",
            "tags": {
              "Name": "OpenVPN-Server"
            },
            "tags_all": {
              "Name": "OpenVPN-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dddbdb9ca7c970a9"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.idmz_sg",
            "module.subnet.aws_subnet.idmz_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "enterprise_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332376096653:subnet/subnet-0ddf33aafb8990a62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddf33aafb8990a62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "332376096653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Enterprise Subnet"
            },
            "tags_all": {
              "Name": "Enterprise Subnet"
            },
            "vpc_id": "vpc-035de6a04b60456dc"
          }
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "idmz_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332376096653:subnet/subnet-00050a8d6befb868f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00050a8d6befb868f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "332376096653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "IDMZ Subnet"
            },
            "tags_all": {
              "Name": "IDMZ Subnet"
            },
            "vpc_id": "vpc-035de6a04b60456dc"
          }
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "industrial_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332376096653:subnet/subnet-068c22c13638f50e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068c22c13638f50e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "332376096653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Industrial Subnet"
            },
            "tags_all": {
              "Name": "Industrial Subnet"
            },
            "vpc_id": "vpc-035de6a04b60456dc"
          }
        }
      ]
    }
  ]
}